improve: universal plugins error handling